chore: changed the check to throw the expection when config is missing and checking for missing signature in notification

--- a/force-app/main/default/classes/HMACValidatorTest.cls
+++ b/force-app/main/default/classes/HMACValidatorTest.cls
@@ -110,7 +110,7 @@ private class HMACValidatorTest {
             Assert.fail();
         }
         catch(HMACValidator.HmacValidationException e){
-            Assert.areEqual('Missing notification data or key', e.getMessage());
+            Assert.areEqual('Missing notification data', e.getMessage());
         }
     }
 }
