chore: adding the missing file, as previous commit had only the test

--- a/force-app/main/default/classes/HMACValidator.cls
+++ b/force-app/main/default/classes/HMACValidator.cls
@@ -3,8 +3,7 @@ public with sharing class HMACValidator {
     private static final String HMAC_SHA256_ALGORITHM = 'HmacSHA256';
     private static final String DATA_SEPARATOR = ':';
     
-    @TestVisible
-    private class HmacValidationException extends Exception {}
+    public class HmacValidationException extends Exception {}
 
     @TestVisible
     private String calculateHMAC(NotificationRequestItem notificationRequestItem, String key){
@@ -46,11 +45,11 @@ public with sharing class HMACValidator {
     
 
    public Boolean validateHMAC(NotificationRequestItem notificationRequestItem, String hmacKey){
-        if (notificationRequestItem.additionalData == null || hmacKey == null) {
-            throw new HmacValidationException('Missing notification data or key');
+        String hmacSignature = notificationRequestItem.additionalData?.get('hmacSignature');
+        if (String.isBlank(hmacSignature)) {
+            throw new HmacValidationException('Missing notification data');
         }
         String calculatedSignature = calculateHMAC(notificationRequestItem, hmacKey);
-        String hmacSignature = notificationRequestItem.additionalData.get('hmacSignature');
 
         return compareHMAC(calculatedSignature, hmacSignature);
     }
