fix: resolving conflict

--- a/force-app/main/default/classes/NotificationRequestItem.cls
+++ b/force-app/main/default/classes/NotificationRequestItem.cls
@@ -1,9 +1,10 @@
 /*
 * Represents an Adyen Webhook Notification Request Item
 */
-
 @NamespaceAccessible
 public with sharing class NotificationRequestItem {
+    @NamespaceAccessible
+    public Map<String,String> additionalData {get;set;}
 
     @NamespaceAccessible
     public Amount amount {get;set;}
@@ -16,6 +17,9 @@ public with sharing class NotificationRequestItem {
 
     @NamespaceAccessible
     public String merchantAccountCode {get;set;}
+
+    @NamespaceAccessible
+    public String merchantReference {get;set;}
 
     @NamespaceAccessible
     public String paymentMethod {get;set;}
@@ -34,8 +38,4 @@ public with sharing class NotificationRequestItem {
 
     @NamespaceAccessible
     public String success {get;set;}
-
-    @NamespaceAccessible
-    public Map<String,String> additionalData {get;set;}
-  
 }
