feat: updating model for ach payment method

--- a/force-app/main/default/classes/ACHDetailsTest.cls
+++ b/force-app/main/default/classes/ACHDetailsTest.cls
@@ -1,26 +1,16 @@
-@isTest
+@IsTest
 public class ACHDetailsTest {
-    /**
-    * Test method to enhance code coverage for Apex Models; This ain't validating any specific business use cases.
-    * Enhances code coverage for ACHDetails apex class
-    */
-    @isTest
-    private static void testAllMethodsFromACHDetails(){
-        ACHDetails achTestInstance0 = ACHDetails.getExample();
-        System.assertEquals(achTestInstance0.encryptedBankAccountNumber,'');
-
-        ACHDetails achTestInstance1 = new ACHDetails();
-        achTestInstance1.setType('TestString');
-        String retStringVal = achTestInstance1.getType();
-        System.debug('retStringVal : ' + retStringVal);
-        Boolean retBooleanVal1 = achTestInstance1.equals(achTestInstance1);
-        Integer retIntValue = achTestInstance1.hashCode();
-        System.assertEquals(retBooleanVal1,true);
-
-        ACHDetails achTestInstance2 = new ACHDetails();
-        Boolean retBooleanVal2 = achTestInstance2.equals('Test');
-        System.assertEquals(retBooleanVal2,false);
-
+    @IsTest
+    private static void ACHDetailsEqualityTest() {
+        // given
+        ACHDetails achTest1 = ACHDetails.getExample();
+        ACHDetails achTest2 = ACHDetails.getExample();
+        ACHDetails achTest3 = ACHDetails.getExample();
+        achTest3.setType('another type');
+        // then
+        Assert.areEqual(achTest1, achTest2);
+        Assert.areEqual(achTest1.hashCode(), achTest2.hashCode());
+        Assert.areNotEqual(achTest1, achTest3);
+        Assert.areNotEqual(achTest1.hashCode(), achTest3.hashCode());
     }
-
 }
