fix: lint for test method name

--- a/force-app/main/default/classes/ACHDetailsTest.cls
+++ b/force-app/main/default/classes/ACHDetailsTest.cls
@@ -1,7 +1,7 @@
 @IsTest
 public class ACHDetailsTest {
     @IsTest
-    private static void AchDetailsEqualityTest() {
+    private static void achDetailsEqualityTest() {
         // given
         ACHDetails achTest1 = ACHDetails.getExample();
         ACHDetails achTest2 = ACHDetails.getExample();
