Updating model for ACH payment method (#47)
* feat: updating model for ach payment method

* fix: && position

* fix: lint for test method name

* fix: lint for test method name

* Implementing Unit Test automation (#48)

* feat: workflow to run unit tests

* fix: authentication issue

* fix: code coverage issue

---------

Co-authored-by: daniloc <danilo.cardoso@adyen.com>

---------

Co-authored-by: daniloc <danilo.cardoso@adyen.com>

--- a/force-app/main/default/classes/ACHDetails.cls
+++ b/force-app/main/default/classes/ACHDetails.cls
@@ -1,88 +1,120 @@
-/*
-* Adyen Checkout API
-* Adyen Checkout API provides a simple and flexible way to initiate and authorise online payments.
-* You can use the same integration for payments made with cards (including 3D Secure), mobile wallets, and local payment methods (for example, iDEAL and Sofort).
-* This API reference provides information on available endpoints and how to interact with them. To learn more about the API, visit [Checkout documentation](https://docs.adyen.com/checkout).\n\n## Authentication\nEach request to the Checkout API must be signed with an API key. For this, obtain an API Key from your Customer Area, as described in [How to get the API key](https://docs.adyen.com/user-management/how-to-get-the-api-key). Then set this key to the `X-API-Key` header value, for example:\n\n```\ncurl\n-H "Content-Type: application/json" \\n-H "X-API-Key: Your_Checkout_API_key" \\n...\n```\nNote that when going live, you need to generate a new API Key to access the [live endpoints](https://docs.adyen.com/development-resources/live-endpoints).\n\n## Versioning\nCheckout API supports versioning of its endpoints through a version suffix in the endpoint URL. This suffix has the following format: "vXX", where XX is the version number.\n\nFor example:\n```\nhttps://checkout-test.adyen.com/v64/payments\n```
-*
-* Contact: support@adyen.com
-
-* Do not edit the class manually.
-*/
-
-@namespaceAccessible
+@NamespaceAccessible
 public with sharing class ACHDetails implements PaymentMethodDetails {
     /**
-    * Get encryptedBankAccountNumber
-    * @return encryptedBankAccountNumber
+    * The bank account number (without separators).
     */
-    @namespaceAccessible
-    public String encryptedBankAccountNumber { get; set; }
+    @NamespaceAccessible
+    public String bankAccountNumber;
 
     /**
-    * Get encryptedBankLocationId
-    * @return encryptedBankLocationId
+    * The bank account type (checking, savings...)
     */
-    @namespaceAccessible
-    public String encryptedBankLocationId { get; set; }
+    @NamespaceAccessible
+    public String bankAccountType;
 
     /**
-    * Get ownerName
-    * @return ownerName
+    * The bank routing number of the account. The field value is nil in most cases
     */
-    @namespaceAccessible
-    public String ownerName { get; set; }
+    @NamespaceAccessible
+    public String bankLocationId;
 
     /**
-    * **scheme**
-    * @return type
+    * The checkout attempt identifier
     */
-    @namespaceAccessible
-    public String type { get; set; }
+    @NamespaceAccessible
+    public String checkoutAttemptId;
 
-    @namespaceAccessible
+    /**
+    * Encrypted bank account number. The bank account number (without separators)
+    */
+    @NamespaceAccessible
+    public String encryptedBankAccountNumber;
+
+    /**
+    * Encrypted location id. The bank routing number of the account. The field value is nil in most cases
+    */
+    @NamespaceAccessible
+    public String encryptedBankLocationId;
+
+    /**
+    * The name of the bank account holder
+    * If you submit a name with non-Latin characters, we automatically replace some of them with corresponding Latin characters to meet the FATF recommendations
+    */
+    @NamespaceAccessible
+    public String ownerName;
+
+    /**
+    * This is the recurringDetailReference returned in the response when you created the token
+    */
+    @NamespaceAccessible
+    public String storedPaymentMethodId;
+
+    /**
+    * ach
+    */
+    @NamespaceAccessible
+    public String type;
+
+    @NamespaceAccessible
     public ACHDetails() {
         type = 'ach';
     }
 
-    @namespaceAccessible
-    public String getType() {
-        return type;
-    }
-
-    @namespaceAccessible
-    public void setType(String type) {
-        this.type = type;
-    }
-
-    @namespaceAccessible
+    @NamespaceAccessible
     public static ACHDetails getExample() {
         ACHDetails achDetails = new ACHDetails();
-        achDetails.encryptedBankAccountNumber = '';
-        achDetails.encryptedBankLocationId = '';
-        achDetails.ownerName = '';
-        achDetails.type = '';
+        achDetails.bankAccountNumber = '123456789';
+        achDetails.bankAccountType = 'checking';
+        achDetails.bankLocationId = null;
+        achDetails.checkoutAttemptId = 'abc123';
+        achDetails.encryptedBankAccountNumber = 'adyenjs_0_1_25$GTE/ytzAupIEbFEybScAA/T3W8+Xj3...';
+        achDetails.encryptedBankLocationId = 'adyenjs_0_1_25$UbyYyi7693Ya9e3cZNYOJj//l7...';
+        achDetails.ownerName = 'John Smith';
+        achDetails.storedPaymentMethodId = null;
+        achDetails.type = 'ach';
         return achDetails;
     }
 
-    @namespaceAccessible
+    @NamespaceAccessible
     public Boolean equals(Object obj) {
         if (obj instanceof ACHDetails) {
-            ACHDetails achDetails = (ACHDetails) obj;
-            return this.encryptedBankAccountNumber == achDetails.encryptedBankAccountNumber
-                && this.encryptedBankLocationId == achDetails.encryptedBankLocationId
-                && this.ownerName == achDetails.ownerName
-                && this.type == achDetails.type;
+            ACHDetails otherACHDetails = (ACHDetails) obj;
+            return this.bankAccountNumber == otherACHDetails.bankAccountNumber
+                && this.bankAccountType == otherACHDetails.bankAccountType
+                && this.bankLocationId == otherACHDetails.bankLocationId
+                && this.checkoutAttemptId == otherACHDetails.checkoutAttemptId
+                && this.encryptedBankAccountNumber == otherACHDetails.encryptedBankAccountNumber
+                && this.encryptedBankLocationId == otherACHDetails.encryptedBankLocationId
+                && this.ownerName == otherACHDetails.ownerName
+                && this.storedPaymentMethodId == otherACHDetails.storedPaymentMethodId
+                && this.type == otherACHDetails.type
+            ;
         }
         return false;
     }
 
-    @namespaceAccessible
+    @NamespaceAccessible
     public Integer hashCode() {
         Integer hashCode = 43;
-        hashCode = (17 * hashCode) + (encryptedBankAccountNumber == null ? 0 : System.hashCode(encryptedBankAccountNumber));
-        hashCode = (17 * hashCode) + (encryptedBankLocationId == null ? 0 : System.hashCode(encryptedBankLocationId));
-        hashCode = (17 * hashCode) + (ownerName == null ? 0 : System.hashCode(ownerName));
-        hashCode = (17 * hashCode) + (type == null ? 0 : System.hashCode(type));
+        hashCode = (17 * hashCode) + (bankAccountNumber == null ? 0 : bankAccountNumber.hashCode());
+        hashCode = (17 * hashCode) + (bankAccountType == null ? 0 : bankAccountType.hashCode());
+        hashCode = (17 * hashCode) + (bankLocationId == null ? 0 : bankLocationId.hashCode());
+        hashCode = (17 * hashCode) + (checkoutAttemptId == null ? 0 : checkoutAttemptId.hashCode());
+        hashCode = (17 * hashCode) + (encryptedBankAccountNumber == null ? 0 : encryptedBankAccountNumber.hashCode());
+        hashCode = (17 * hashCode) + (encryptedBankLocationId == null ? 0 : encryptedBankLocationId.hashCode());
+        hashCode = (17 * hashCode) + (ownerName == null ? 0 : ownerName.hashCode());
+        hashCode = (17 * hashCode) + (storedPaymentMethodId == null ? 0 : storedPaymentMethodId.hashCode());
+        hashCode = (17 * hashCode) + (type == null ? 0 : type.hashCode());
         return hashCode;
+    }
+
+    @NamespaceAccessible
+    public String getType() {
+        return type;
+    }
+
+    @NamespaceAccessible
+    public void setType(String type) {
+        this.type = type;
     }
 }
