fix: undeleting classes to avoid OMS upgrade blockage

--- a/force-app/main/default/classes/NotificationRequestItem.cls
+++ b/force-app/main/default/classes/NotificationRequestItem.cls
@@ -28,6 +28,9 @@ public with sharing class NotificationRequestItem {
     public String originalReference {get;set;}
 
     @NamespaceAccessible
+    public String paymentPspReference {get;set;}
+
+    @NamespaceAccessible
     public String pspReference {get;set;}
 
     @NamespaceAccessible
